# transfer-entropy-toolbox

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
analysis/check_consistency/: thesis_code_reproduction.py  utils.py
analysis/scripts/VG1_ES1/: constants_vg1_es1.py  vg1_es1.py
analysis/scripts/binning_method_consistency/: binning_analysis.py  binning_constants.py  max_entropy_bins.py  metric_enum.py
analysis/scripts/entropy_surface/: surfaces.py  surfaces_constant.py
analysis/scripts/epsilon_scan/: analyze.py  create_maps.py  eps_scan_constants.py  plot_maps.py  plot_utils.py
analysis/scripts/futures/: futures_causal_graph.py  futures_constants.py  futures_fixed_bins.py  futures_main.py  futures_max_tent.py  futures_tent_main.py  plot_fixed_bins.py  plot_max_tent.py  plot_specific.py  single_day_heatmap.py  util.py
analysis/scripts/futures/wrangling/: __init__.py  columns.py  data_builder.py
analysis/scripts/te_fixed_bins/: te_magnitude_fixed_bins.py
performance_benchmarks/: baseline.txt  benchmark_script.py  with_numba.txt
scratchpad/: c_bindinds_hello_world.py  eval_statistical_binning_methods.py  time_entropy.py
src/te_toolbox/: __init__.py  entropies.py  preprocessing.py
src/te_toolbox/binning/: __init__.py  clustering.py  entropy_maximising.py  rules.py  statistical.py
src/te_toolbox/entropies/: __init__.py  bivariate.py  multivariate.py  mutual_information.py  transfer.py  univariate.py  utils.py
src/te_toolbox/entropies/bivariate/: __init__.py  conditional_entropy.py  joint_entropy.py  mutual_information.py
src/te_toolbox/entropies/core/: __init__.py  backend.py  discretization.py  types.py
src/te_toolbox/entropies/cpp/: __init__.py  _fast_entropy.pyi
src/te_toolbox/entropies/cpp/src/: discrete_conditional_entropy.cpp  discrete_entropy.h  discrete_joint_entropy.cpp  discrete_multivar_entropy.h  discrete_transfer_entropy.cpp  discrete_transfer_entropy.h  multivar_entropy.cpp
src/te_toolbox/entropies/multivariates/: multivariate_joint_entropy.py
src/te_toolbox/entropies/python/: __init__.py
src/te_toolbox/entropies/python/bivariate/: __init__.py  joint_entropy.py  mutual_information.py
src/te_toolbox/entropies/python/multivariates/: __init__.py  multivariate_joint_entropy.py
src/te_toolbox/entropies/python/transfer/: __init__.py  base.py  normalized.py
src/te_toolbox/entropies/python/univariate/: __init__.py  entropy.py
src/te_toolbox/entropies/transfer/: __init__.py  base.py  normalized.py
src/te_toolbox/entropies/univariate/: entropy.py
src/te_toolbox/fast_entropy/: CMakeLists.txt  __init__.py  build.sh  compile_commands.json
src/te_toolbox/fast_entropy/src/: adder.cpp  bindings.cpp  discrete_conditional_entropy.h  discrete_entropy.cpp  discrete_entropy.h  discrete_joint_entropy.h  discrete_transfer_entropy.cpp  discrete_transfer_entropy.h  multivar_entropy.cpp  multivar_entropy.h
src/te_toolbox/stats/: __init__.py  autocorr.py
src/te_toolbox/systems/: __init__.py  constants.py  lattice.py  maps.py
tests/: __init__.py  conftest.py  test_binnings.py  test_cent.py  test_chaotic_maps.py  test_entropies.py  test_entropy.py  test_jent.py  test_lattice.py  test_legacy_consistency.py  test_max_ent_bins.py  test_multivar_jent.py  test_mutual_information.py  test_numpy_cpp_consistency.py  test_preprocessing_utils.py  test_te_py_cpp_integration_consistency.py  test_transfer_entropy.py
tests/legacy_implementation/: __init__.py  thesis_package.py
