[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "te-toolbox"
version = "0.1.0"
authors = [
    {name = "Max Mynter"}
]
description = "A paper from my M.Sc. thesis about the problems of Transfer Entropy from discretized continuous time series."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90", "N", "D", "UP", "PL", "RUF", "C4", "SIM", "TCH"]
ignore = ["D203", "D211", "D212", "D213"]

[tool.hatch.build]
packages = ["src/te_toolbox"]
