[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "te-toolbox"
version = "0.1.0"
authors = [
    {name = "Max Mynter"}
]
description = "A paper from my M.Sc. thesis about the problems of Transfer Entropy from discretized continuous time series."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "numba"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis", "ruff", "numpy-typing", "mypy"]
legacy-tests = ["scipy", "scikit-learn", "pandas"]
analysis=["seaborn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = ["legacy: tests that check legacy implementation consistency"]
addopts = "-m 'not legacy'"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
show-fixes = true
exclude = ["tests/legacy_implementation/thesis_package.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90", "N", "D", "UP", "PL", "RUF", "C4", "SIM", "TCH"]
ignore = ["D203", "D211", "D212", "D213"]

[tool.hatch.build]
packages = ["src/te_toolbox"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"
follow_imports = "silent"
